@startuml

interface AbstractFactory {
    CreateProductA()
    CreateProductB()
}
class ConcreteFactory1 {
    CreateProductA()
    CreateProductB()
}
class ConcreteFactory2 {
    CreateProductA()
    CreateProductB()
}
ConcreteFactory1 --|> AbstractFactory
ConcreteFactory2 --|> AbstractFactory

interface AbstractProductA
class ProductA1
class ProductA2
ProductA1 --|> AbstractProductA
ProductA2 --|> AbstractProductA

interface AbstractProductB
class ProductB1
class ProductB2
ProductB1 --|> AbstractProductB
ProductB2 --|> AbstractProductB

ConcreteFactory1 ..> ProductA1
ConcreteFactory1 ..> ProductB1

ConcreteFactory2 ..> ProductA2
ConcreteFactory2 ..> ProductB2

@enduml